# public/swagger.json
@@ -107,6 +107,43 @@
 				"parameters": []
 			}
 		},
+		"/reviews/{id}": {
+			"get": {
+				"operationId": "GetReviewById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/ReviewDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Reviews"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/games": {
 			"get": {
 				"operationId": "GetAllGames",
